2005-12-07  David Hampton  <hampton@employees.org>

	* src/gnome/gnc-plugin-page-budget.c:
	* src/gnome/ui/gnc-plugin-page-budget-ui.xml: Add support for
	opening account registers from the budget page.  Use shorter
	toolbar labels.

	* src/gnome-utils/gnc-tree-view-account.c: Add a check that the
	tree selection is in the right mode to call
	gnc_tree_view_account_get_selected_account().

	* configure.in: Comment out the recently introduced second set of
	checks for gconf.  They cause problems with schema installation.

2005-12-06  Joshua Sled  <jsled@asynchronous.org>

	* gnc-main-window.c (gnc_menu_actions): Remove Misc menu.

2005-12-06  David Hampton  <hampton@employees.org>

	* src/gnome/dialog-price-edit-db.c: Fix the edit price to properly
	check the number of selected prices.

	* lib/goffice-0.0.4/goffice/gtk/go-combo-text.c: Comment out
	function that does nothing except generate a compiler warning.

2005-12-06  Joshua Sled  <jsled@asynchronous.org>

	* gog-graph-impl.h: 
	* gog-graph.c (gog_graph_unref_data), (gog_graph_ref_data): Don't
	misuse the Quark storage for pointers, especially because they're
	not integer-sized on a 64-bit platform.

2005-12-06  Derek Atkins  <derek@ihtfp.com>

	* configure.in: remove libgsf/po/Makefile and goffice/po/Makefile
	  because we never build these directories.

	* configure.in:
	  - remove libgsf/doc*
	  - remove GTK_DOC checks
	* lib/libgsf/Makefile.am: remove 'doc' from SUBDIRS and
	  remove distcheck extra flags.
	
2005-12-05  Christian Stimming  <stimming@tuhh.de>

	* src/backend/file/gnc-backend-file.c: Don't chown() the owner,
	only root can do that. Ignore errors on chown() since that means
	the save completed successful anyway.

2005-12-04  Derek Atkins  <derek@ihtfp.com>

	* configure.in: fix some of the output strings
	* lib/libgsf-1.12.3/gsf/glib24_26-compat.c:
	  make g_get_filename_charsets static because it's not
	  needed outside this file.
	* lib/goffice-0.0.4/goffice/glib24_26-compat.c: